# tech_notification_rust

./: Cargo.toml  README.md  event.json  main2.rs
docker/: Dockerfile  compose.yaml
docker/data/: db.json
src/: lib.rs  main.rs
src/domain/: item.rs
src/repository/: line_repository.rs  mod.rs  qiita_api_repository.rs  scraper_repository.rs  weather_repository.rs  zenn_api_repository.rs
src/usecase/: line_usecase.rs  mod.rs  tech_recommend_usecase.rs  train_info_usecase.rs  weather_usecase.rs
