[package]
name = "tech_notification_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = "0.15.1"
lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
thiserror = "2.0.7"
blocking = "1.6.1"
scraper = "0.22.0"
chrono = "0.4.39"